delete useless set device